test
valgrind --leak-check=full --track-origins=yes ./42sh -u 

[01;36m42sh -- [00;32mRemoved '42sh'[0m
srcs/autocomplete/autocomplete_path.c:17:8: error: conflicting types for ‘ft_getpath’
 char **ft_getpath(t_shell *s, char *path)
        ^
In file included from srcs/autocomplete/autocomplete_path.c:1:0:
includes/ft_shell.h:193:9: note: previous declaration of ‘ft_getpath’ was here
 char   *ft_getpath(t_shell *s, char *path);
         ^
srcs/autocomplete/autocomplete_path.c: In function ‘ft_getpath’:
srcs/autocomplete/autocomplete_path.c:24:34: error: suggest braces around empty body in an ‘if’ statement [-Werror=empty-body]
  if(ft_strchr(path, '/') == NULL);
                                  ^
srcs/autocomplete/autocomplete_path.c:25:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return (ret);
          ^
srcs/autocomplete/autocomplete_path.c:26:2: error: ‘else’ without a previous ‘if’
  else
  ^
srcs/autocomplete/autocomplete_path.c:28:33: error: invalid operands to binary != (have ‘t_split_string {aka struct s_split_string}’ and ‘void *’)
   (sp = ft_nstrsplit(path, '/') != NULL)
                                 ^
srcs/autocomplete/autocomplete_path.c:29:3: error: expected ‘;’ before ‘ret’
   ret = ft_strjoinstr(ret. '/', path);
   ^
srcs/autocomplete/autocomplete_path.c:31:9: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
  return (ret)
         ^
srcs/autocomplete/autocomplete_path.c:32:1: error: expected ‘;’ before ‘}’ token
 }
 ^
srcs/autocomplete/autocomplete_path.c:21:9: error: unused variable ‘i’ [-Werror=unused-variable]
  int    i;
         ^
srcs/autocomplete/autocomplete_path.c:20:17: error: variable ‘sp’ set but not used [-Werror=unused-but-set-variable]
  t_split_string sp;
                 ^
srcs/autocomplete/autocomplete_path.c: In function ‘ft_select_path’:
srcs/autocomplete/autocomplete_path.c:43:2: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘sp’
  sp = ft_nstrsplit(s->curr, ' ');
  ^
srcs/autocomplete/autocomplete_path.c:45:2: error: ‘path’ undeclared (first use in this function)
  path = ft_getpath(s, tmp)
  ^
srcs/autocomplete/autocomplete_path.c:45:2: note: each undeclared identifier is reported only once for each function it appears in
srcs/autocomplete/autocomplete_path.c:46:2: error: expected ‘;’ before ‘if’
  if((dir = opendir(path)) == NULL)
  ^
cc1: all warnings being treated as errors
Makefile:62: recipe for target '42sh' failed
make[1]: *** [42sh] Error 1
Makefile:77: recipe for target 'run' failed
make: *** [run] Error 2
valgrind: ./42sh: No such file or directory
